<resources>
    <string name="app_name">Evalution1</string>
    <string name="bac_calculator">BAC Calculator</string>
    <string name="weight_lbs">Weight (lbs):</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="beer">Beer</string>
    <string name="twelve_oz">12.0 oz (5%)</string>
    <string name="wine">Wine</string>
    <string name="five_oz">5.0 oz (12%)</string>
    <string name="liquor_drinks">Liquor Drinks</string>
    <string name="one_half_oz">1.5 oz (40%)</string>
    <string name="malt_liquor">Malt Liquor</string>
    <string name="nine_oz">9.0 oz (7%)</string>
    <string name="bac_default">Your BAC Level: 0.00%</string>
    <string name="you_are_safe">You\'re Safe</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>




</resources>